--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -13,15 +13,19 @@
     line-height: 48px;
     width: auto;
     display: inline-block;
+    font-size: 20px;
+    font-weight: bold;
+    color: #F5F5F5;
 }
 
 .header {
     width: 100%;
     height: 48px;
-    background-color: #99c2fa;
+    background-color: #A48163;
     position: absolute;
     top: 0;
     left: 0;
+    padding: 0 10px;
 }
 
 .footer {
@@ -30,7 +34,7 @@
     bottom: 0;
     width:100%;
     height: 36px;
-    background-color: #803b00;
+    background-color: #A48163;
 }
 
 .footer span {
@@ -48,15 +52,9 @@
 
 .main-box {
     width: 80%;
-    margin: 60px auto;
-    /* position: absolute;
-    left: 40px;
-    top: 60px;
-    width: 420px;
-    height:500px; */
-
+    margin: 80px auto;
     padding: 10px;
-    border: 1px solid red;
+    background-color: #F0E68C
 }
 
 .input-box {
@@ -82,7 +80,7 @@
 }
 
 .list-item {
-    padding: 0px 8px;
+    padding: 0px 14px;
     line-height: 40px;
     height: 40px;
     border-top: 1px solid gray;
