--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -15,3 +15,8 @@
 .boxo{border:1px dashed red}
 .hide{display:none}
 .right{float:right}
+@media (max-width:480px){.main-box{position:absolute;top:48px;left:0;right:0;bottom:36px;width:100%;margin:0;padding:10px;background-color:khaki}
+.todo-list{border:2px solid gray;height:auto;overflow:scroll;position:absolute;top:55px;bottom:10px;left:10px;right:10px}}
+@media (min-width:720px){.todo-list{border:2px solid gray;width:120px;height:200px;overflow:scroll;display:inline-block}
+.item-detail{float:right;width:calc(100% - 140px);height:200px;display:inline-block}
+.item-detail button{margin-top:-45px;float:right}}
