--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,10 +8,10 @@
 .input-box{width:100%;height:34px;margin-bottom:10px}
 .input-box .search-input{width:82%;height:100%}
 .save-button{width:16%;height:100%}
-.todo-list{border:2px solid gray;height:200px;overflow:scroll}
+.todo-list{border:1px solid gray;height:200px;overflow:scroll}
 .list-item{padding:0 14px;line-height:40px;height:40px;border-top:1px solid gray;border-bottom:1px solid gray;margin-top:-1px}
 .list-item span{line-height:36px;outline:0}
-.selected{background-color:#ff0}
+.selected{background-color:#C2DAC2}
 .boxo{border:1px dashed red}
 .hide{display:none}
 .right{float:right}
